@@ -5123,7 +5123,7 @@
  PROV_ADJ5903: "Supraslian"
  PROV_ADJ5904: "Melnikian"
  PROV_ADJ5905: "Strzelnoian"
- PROV_ADJ5906: "Wroclawekian"
+ PROV_ADJ5906: "Wloclawekian"
  PROV_ADJ5907: "Gabinian"
  PROV_ADJ5908: "Wegrówian"
  PROV_ADJ5909: "Grójecian"
