@@ -5123,7 +5123,7 @@
  PROV_ADJ5903: "Supraslisch"
  PROV_ADJ5904: "Melnikisch"
  PROV_ADJ5905: "Strzelnoisch"
- PROV_ADJ5906: "Wroclawekisch"
+ PROV_ADJ5906: "Wloclawekisch"
  PROV_ADJ5907: "Gabinisch"
  PROV_ADJ5908: "Wegrówisch"
  PROV_ADJ5909: "Grójecisch"
