@@ -9,6 +9,7 @@
 -Fixed the Lombard League disbanding prematurely
 -Slightly buffed the Baltic orders and invasion countries
 -Changed a province name in Iberia, added a couple more DPNs there
+-Fixed Wloclawek misspelling
 -Some events will now spawn republican rebels instead of noble or revolutionary rebels
 -Reworked Saint Gallen's NI set (contribution by primi)
 -Fixed Sicilian Vespers
